--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -98,6 +98,9 @@
 #ffg_game_upper{
     text-align:center;
     font-size: 25px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 .ffg_theme_dark #ffg_game_upper{
     color: white;
@@ -108,7 +111,7 @@
 }
  
 #ffg_round_label, #ffg_playerBoardSliderSize, #ffg_cardsSliderSize{
-    margin: 0 10px;
+    margin: 10px 10px 10px 10px;
 }
 #ffg_game_upper.ffg_fixed_page_title {
     /*  Left fixed Disabled because I linked onScreenWidthChange and sliders
@@ -130,6 +133,68 @@
     width: 100%;
     */
 }
+
+
+#ffg_user_settings {
+    text-align: center;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    outline: 2px solid;
+    padding: 7px;
+}
+#ffg_icon_settings{
+    transition: transform 1s;
+}
+.notouch-device #ffg_icon_settings:hover{
+    transform: rotate(180deg);
+}
+#ffg_move_mode_switch {
+    text-align: center;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+}
+#ffg_move_mode_switch .checkbox {
+    display: none;
+}
+#ffg_move_mode_switch .label {
+    background-color: #2c3037;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    height: 26px;
+    margin-right: 4px;
+    position: relative;
+    width: 50px;
+}
+#ffg_move_mode_switch .label .ffg_ball {
+    background-color: #fff;
+    border-radius: 50%;
+    height: 22px;
+    left: 2px;
+    position: absolute;
+    top: 2px;
+    transform: translateX(0);
+    transition: transform .2s linear,color .7s linear;
+    width: 22px;
+}
+.ffg_theme_dark #ffg_move_mode_switch .label {
+    background-color: #fff;
+}
+.ffg_theme_dark #ffg_move_mode_switch .label .ffg_ball {
+    background-color: #2c3037;
+}
+#ffg_move_mode_switch .checkbox:checked+.label .ffg_ball {
+    transform: translateX(24px);
+}
+#ffg_move_mode_switch :is(#ffg_icon_move_single, #ffg_move_multiple) {
+    margin: 0 5px;
+}
+
+
 /*
 ---------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------- 
