--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -2018,14 +2018,23 @@ html:not(.ffg_lang_translated) .ffg_board_overtime_label_simple{
     position: relative;
     cursor: inherit;
     margin-top: -5px;
+    text-shadow: #ffe695 2px 0 2px, #ffe695 0 2px 2px, #ffe695 -2px 0 2px, #ffe695 0 -2px 2px;
+}
+.ffg_board_overtime_unused_label .ffg_label_simple_2{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    line-height: 13px;
 }
 html.ffg_font_designer .ffg_board_overtime_unused_label .ffg_label_simple_2{
-    margin-top: -10px;
+    margin-top: -13px;
 }
 .ffg_board_overtime_unused_label .ffg_label_simple_1,
 .ffg_label_adjusted .ffg_label_adjusted_1{
-    line-height: 30px;
-    font-size: 30px;
+    line-height: 20px;
+    font-size: 20px;
 }
 html:not(.ffg_lang_translated) .ffg_label_simple_1,
 html:not(.ffg_lang_translated) .ffg_label_simple_2{
@@ -2182,6 +2191,9 @@ html.ffg_font_simple .ffg_cardModifier{
     font-family: 'Fugaz One';
     line-height: 85px;
     font-size: 85px;
+}
+html.ffg_lang_original .ffg_board_currency_label_simple{
+    display: none;
 }
 
 .ffg_board_week_label{
