--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -497,7 +497,13 @@ html.ffg_lang_translated_adjusted #ffg_overview_week3>div{
 .notouch-device .ffg_button_card_plus.ffg_selectable:hover,
 .notouch-device .ffg_button_card_minus.ffg_selectable:hover {
     cursor: pointer;
-    scale: 1.15
+    scale: 1.15;
+}
+html.ffg_font_designer .ffg_button_symbol{
+    /** increase symbol size because it is smaller in this font*/
+    font-size: 20px;
+    padding-right: 2px;
+    line-height: 10px;
 }
 
 .ffg_icon_card_suit,
