--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -369,13 +369,19 @@ html.ffg_lang_translated_adjusted #ffg_overview_week3>div{
 #ffg_showScoreDialogContent table tbody tr:nth-of-type(odd) {
     background-color: lightgray;
 }
+#ffg_showScoreDialogContent table tbody tr:nth-of-type(odd):not(.ffg_highlight) .ffg_player_col>.playername[style*='color:#ffa500']{
+    /* when light orange player is on lightgray background*/
+    text-shadow: 1px 0 1px #fff, 0 1px 1px #fff, -1px 0 1px #fff, 0 -1px 1px #fff;
+}
 #ffg_showScoreDialogContent table tbody tr.ffg_highlight{
     outline: 3px solid #6c2c12;
     /** tested to be visible for "achromatopsia color blindness" */
     background-color: #ffc200;
 }
-#ffg_showScoreDialogContent table tbody tr.ffg_highlight .ffg_player_col>.playername[style*='color:#ffa500'],
-#ffg_showScoreDialogContent table tbody tr.ffg_highlight .ffg_player_col>.playername[style*='color:#f07f16']{
+#ffg_showScoreDialogContent .ffg_player_col>.playername[style*='color:#ffffff'],
+#ffg_showScoreDialogContent .ffg_player_col>.playername[style*='color:#bdd002'],
+#ffg_showScoreDialogContent tr.ffg_highlight .ffg_player_col>.playername[style*='color:#ffa500'],
+#ffg_showScoreDialogContent tr.ffg_highlight .ffg_player_col>.playername[style*='color:#f07f16']{
     /* when orange player is highlighted*/
     text-shadow: 1px 0 1px #000, 0 1px 1px #000, -1px 0 1px #000, 0 -1px 1px #000;
 }
