--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -354,6 +354,8 @@ html.ffg_lang_translated_adjusted #ffg_overview_week3>div{
 }
 #ffg_showScoreDialogContent table tbody tr td.ffg_player_col{
     word-wrap: break-word;
+    /* I don't want line break between avatar and name :*/
+    white-space: nowrap;
 }
 
 #ffg_showScoreDialogContent td.ffg_delivered_col span:first-child,
