--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -229,6 +229,124 @@ html.ffg_lang_translated_adjusted{
     top: 5px;
 }
 
+
+/*
+---------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------- 
+---------------------------- PLAYER PREFERENCES PANEL                   ---------------
+---------------------------- inspired by GWT by docthib                 ---------------
+---------------------------------------------------------------------------------------
+*/
+
+#player_boards {
+    display:flex;
+    flex-direction:column;
+}
+#ffg_panel_user_prefs,
+.mobile_version #player_boards {
+    flex-direction:row;
+    flex-wrap:wrap;
+   }
+#ffg_panel_user_prefs {
+    align-items:center;
+    display:flex;
+    font-size:.9em;
+    justify-content:space-evenly;
+    order:-1;
+}
+.mobile_version #ffg_panel_user_prefs {
+    order:99;
+}
+/* Not needed yet
+   .block-user-pref {
+    display:flex
+   }
+   .block-user-pref-label {
+    align-self:center;
+    flex-basis:80%;
+    margin-top:-2px
+   }
+   .block-user-pref-radio {
+    flex-wrap:wrap;
+    justify-content:center;
+    margin-top:5px
+   }
+   .block-user-pref-radio .block-user-pref-label {
+    flex-basis:auto;
+    font-weight:700
+   }
+*/
+.ffg_pref_group {
+    background-color:#dabd9c;
+    border-radius:5px;
+    font-weight:700;
+    margin:5px 0;
+    text-align:center;
+}
+.ffg_icon_user_pref {
+    cursor:pointer;
+    display:inline-block;
+    padding:5px;
+}
+.notouch-device .ffg_icon_user_pref:hover {
+    transform: scale(1.2);
+}
+.ffg_icon_user_pref .fa {
+    font-size:2.5em;
+}
+.ffg_panel_user_pref input[type=range] {
+    width:100%;
+}
+#ffg_block_user_prefs #ffg_playerBoardSliderSize, 
+#ffg_block_user_prefs #ffg_cardsSliderSize{
+    margin: 0px;
+}
+/*
+   .slider {
+    background-color:#ccc;
+    bottom:0;
+    cursor:pointer;
+    left:0;
+    right:0;
+    top:0
+   }
+   .slider,
+   .slider:before {
+    position:absolute;
+    -webkit-transition:.4s;
+    transition:.4s
+   }
+   .slider:before {
+    background-color:#fff;
+    bottom:4px;
+    content:"";
+    height:19px;
+    left:4px;
+    width:19px
+   }
+
+   input:checked+.slider {
+    background-color:#2196f3
+   }
+   input:focus+.slider {
+    box-shadow:0 0 1px #2196f3
+   }
+   input:checked+.slider:before {
+    -webkit-transform:translateX(15px);
+    -ms-transform:translateX(15px);
+    transform:translateX(15px)
+   }
+   .slider.round {
+    border-radius:34px
+   }
+   .slider.round:before {
+    border-radius:50%
+   }
+*/
+
+
+
+
 /* 
 ---------------------------- ----------------------------   ---------------------------- 
 ----------------------------  SHOW BOARD DIALOG             ---------------------------- 
